# Reflection-Agent

./: .env.sample  README.md  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
config/: settings.yaml
src/agents/: graph.py  nodes.py  prompts.py  state.py
src/core/: __init__.py  config_loader.py  data_loader.py  text_splitter.py
src/services/: search_tool.py
src/services/embeddings/: __init__.py  embedding_base.py  embedding_factory.py  embedding_provider.py
src/services/llm/: __init__.py  llm_base.py  llm_factory.py  llm_providers.py
src/services/vectorstore/: __init__.py  vector_base.py  vector_factory.py  vector_provider.py
tests/: conftest.py  test_graph.py  test_nodes.py
