[project]
name = "reflection-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.19",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "pymupdf>=1.27.2",
    "langchain-qdrant",
    "langgraph",
    "qdrant-client>=1.17.1",
    "portalocker>=3.2.0",
    "langchain-tavily>=0.2.17",
    "streamlit>=1.56.0",
    "pytest>=9.0.2",
]
